# Mesh-NOW

./: .gitignore  .markdownlint.json  CMakeLists.txt  Makefile  README.md  build_all.sh  esp32.conf  esp32c3.conf  esp32c6.conf  esp32s2.conf  esp32s3.conf  prj.conf  sdkconfig  sdkconfig.defaults  sdkconfig.old  west.yml
.github/: markdown-link-check-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  build_issue.md  feature_request.md  target_support.md
.github/actions/build-all/: action.yml
.github/actions/build-target/: action.yml
.github/actions/generate-build-info/: action.yml
.github/actions/generate-changelog/: action.yml
.github/workflows/: build.yml  dashboard.yml  dependabot.yml  integration.yml  quality.yml  release.yml
Frontend/: index.html  package.json
components/mesh_now/: CMakeLists.txt
configs/: sdkconfig.esp32  sdkconfig.esp32c3  sdkconfig.esp32c6  sdkconfig.esp32s2  sdkconfig.esp32s3
docs/: QUICK_START.md
docs/templates/: firmware_readme.md
frontend/: README.md  build_frontend.py  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: devtools.ts  index.ts  styles.css
main/: CMakeLists.txt  main.c
main/include/: mesh_now.h  web_server.h  wifi_manager.h
main/src/: mesh_now.c  message_queue.c  web_server.c  wifi_manager.c
scripts/: build.py  build.sh  build_all.py  build_all_targets.sh  embed_frontend.py  flash.py  flash_mesh_now.py  install_esptool.py  regenerate_headers.py  test_targets.py  test_targets.sh
src/: main.c
(+8 files in other folders)
